test/classes/delete-free/shared/shared-from-borrow.good
shared-from-borrow.chpl:3: In function 'testShared':
shared-from-borrow.chpl:5: error: cannoti initialize shared from a borrow
