test/classes/delete-free/shared/shared-from-borrow.chpl
class MyClass { }

proc testShared() {
  var mine = (new shared MyClass()).borrow();
  var x = new shared(mine);
}
testShared();
